--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Didar Abdulkhaliq",
   "license": "ISC",
   "dependencies": {
-    "sharp": "^0.32.1"
+    "sharp": "^0.32.1",
+    "signale": "^1.4.0"
   }
 }
